remove phone number

--- a/resume_morales_castillo.tex
+++ b/resume_morales_castillo.tex
@@ -89,7 +89,7 @@
 \personalinfo{%
   % Not all of these are required!
   \email{hello@paulomoralescastillo.com}
-  \phone{+49 157 77291650}
+  %\phone{+49 123456789}
   %\mailaddress{Åddrésş, Street, 00000 Cóuntry}
   \location{Berlin, Germany}
   \homepage{www.paulomoralescastillo.com}
