that time of the year

--- a/resume_morales_castillo.tex
+++ b/resume_morales_castillo.tex
@@ -81,7 +81,7 @@
 
 \begin{document}
 \name{Paulo Morales Castillo}
-\tagline{Analytics Engineer}
+\tagline{data all-arounder}
 %% You can add multiple photos on the left or right
 \photoR{3cm}{profile_picture}
 % \photoL{2.5cm}{Yacht_High,Suitcase_High}
@@ -127,7 +127,7 @@
 
 \cvsection{Experience}
 
-\cvevent{Analytics Engineer}{Freelance}{03.21 -- Ongoing}{Remote}
+\cvevent{Analytics/Data Engineer}{Freelance}{03.21 -- Ongoing}{Remote}
 \begin{itemize}
 
 \item Actively contributed to the creation and implementation of a DAG factory: an application which enables end-users to dynamically create their own Apache Airflow DAGs based on predefined data sources and destinations
@@ -140,7 +140,7 @@
 
 \divider
 
-\cvevent{Business Intelligence Analyst}{Invesdor AG (fmly. Kapilendo AG)}{08.18 -- Ongoing}{Berlin, Germany}
+\cvevent{Business Intelligence Analyst}{Invesdor AG (fmly. Kapilendo AG)}{08.18 -- 06.23}{Berlin, Germany}
 \begin{itemize}
 
 \item Implemented and maintained the company’s business intelligence system in order to analyze data and transform it into valuable insights in an automated, transparent and reliable manner
@@ -264,7 +264,7 @@ Data Warehousing
 
 \divider
 
-Orchestration
+Orchestration/Transformation
 \medskip
 
 \cvtag{dbt}
@@ -289,11 +289,12 @@ Web Analytics
 
 \divider
 
-OS
+%OS
+Certifications
 \medskip
 
-\cvtag{Windows}
-\cvtag{Linux}
+\cvtag{dbt Certified Developer}
+%\cvtag{Linux}
 
 \divider
 
