--- a/resume_morales_castillo.tex
+++ b/resume_morales_castillo.tex
@@ -81,7 +81,7 @@
 
 \begin{document}
 \name{Paulo Morales Castillo}
-\tagline{data all-arounder}
+\tagline{Data Generalist}
 %% You can add multiple photos on the left or right
 \photoR{3cm}{profile_picture}
 % \photoL{2.5cm}{Yacht_High,Suitcase_High}
@@ -89,13 +89,14 @@
 \personalinfo{%
   % Not all of these are required!
   \email{hello@paulomoralescastillo.com}
+  \homepage{https://paulomoralescastillo.com/}
   %\phone{+49 123456789}
   %\mailaddress{Åddrésş, Street, 00000 Cóuntry}
   \location{Berlin, Germany}
-  \homepage{www.paulomoralescastillo.com}
   %\twitter{@twitterhandle}
   \linkedin{moralescas}
   \github{moralescastillo}
+  \faMedium{https://medium.com/@moralescas}
   %% You MUST add the academicons option to \documentclass, then compile with LuaLaTeX or XeLaTeX, if you want to use \orcid or other academicons commands.
   % \orcid{0000-0000-0000-0000}
   %% You can add your own arbtrary detail with
@@ -130,39 +131,43 @@
 \cvevent{Analytics/Data Engineer}{Freelance}{03.21 -- Ongoing}{Remote}
 \begin{itemize}
 
-\item Actively contributed to the creation and implementation of a DAG factory: an application which enables end-users to dynamically create their own Apache Airflow DAGs based on predefined data sources and destinations
+\item Developed a DAG factory application allowing users to create custom Apache Airflow DAGs with pre-defined data sources and destinations
 
-\item Programmed a custom python library to perform Metabase content serialization: to copy measures, charts, and dashboards from one instance to another
+\item Created a custom Python library for efficient Metabase content serialization, enabling the transfer of measures, charts, and dashboards between instances
 
-\item Streamlined client onboarding by automating the creation of dashboards utilizing event-driven functions and reporting APIs
+\item Automated dashboard creation and streamlined client onboarding by leveraging event-driven functions and reporting APIs
 
-\end{itemize}
-
-\divider
-
-\cvevent{Business Intelligence Analyst}{Invesdor AG (fmly. Kapilendo AG)}{08.18 -- 06.23}{Berlin, Germany}
-\begin{itemize}
-
-\item Implemented and maintained the company’s business intelligence system in order to analyze data and transform it into valuable insights in an automated, transparent and reliable manner
-
-\item Designed and created the company's data warehouse, and maintained the orchestration of ELT jobs and API calls
-
-\item Carried out various data-driven projects involving all stages of analysis: cleaning raw data, definition of metrics, transformations, and the creation of reports for the visualization of findings
-
-\item Mentor colleagues and provided technical guidance in areas such as data analysis, warehousing and governance
+\item Authored articles on Medium.com covering data-related topics with a particular focus on dbt (Data Build Tool)
 
 \end{itemize}
 
 \divider
 
-\cvevent{Senior Data Analyst}{smava GmbH}{07.14 -- 06.18}{Berlin, Germany}
+\cvevent{Business Intelligence Analyst - FTE}{Invesdor AG (fmly. Kapilendo AG)}{08.18 -- 06.23}{Berlin, Germany}
 \begin{itemize}
 
-\item Oversaw the conception, implementation and maintenance of probability classification algorithms for the purpose of sales forecasting and recommendation systems
+\item Implemented and managed the company's business intelligence system, automating data analysis and generating valuable insights in a transparent and reliable manner
 
-\item Consolidated and analyzed  structured and unstructured data to derive strategic business insights in the area of customer risk assessment, data consistency and online marketing performance
+\item Led the design and implementation of the company's data warehouse, overseeing ELT job orchestration and API integration.
 
-\item Built and implemented the company's first customer value algorithm, used by the sales team to prioritize new customers
+\item Executed data-driven projects encompassing data cleaning, metric definition, transformations, and report creation for visualizing key findings
+
+\item Mentored colleagues and provided technical guidance in data analysis, data warehousing, and governance practices
+
+
+
+\end{itemize}
+
+\divider
+
+\cvevent{Senior Data Analyst - FTE}{smava GmbH}{07.14 -- 06.18}{Berlin, Germany}
+\begin{itemize}
+
+\item Managed the development, implementation, and maintenance of probability classification algorithms for sales forecasting and recommendation systems
+
+\item Consolidated and analyzed structured and unstructured data to extract strategic business insights related to customer risk assessment, data consistency, and online marketing performance
+
+\item Developed and deployed the company's initial customer value algorithm, enabling the sales team to prioritize new customers effectively.
 
 \item Translated business needs into clear requirements for dashboard creation and automation  
 
@@ -239,6 +244,24 @@
 
 \cvsection{Skills}
 
+%OS
+Certifications
+\medskip
+
+\cvtag{dbt Certified Developer}
+%\cvtag{Linux}
+
+\divider 
+
+Languages
+\medskip
+
+\cvtag{English - C2}
+\cvtag{German - B2}
+\cvtag{Spanish - C2}
+
+\divider 
+
 Analysis
 \medskip
 
@@ -289,21 +312,7 @@ Web Analytics
 
 \divider
 
-%OS
-Certifications
-\medskip
 
-\cvtag{dbt Certified Developer}
-%\cvtag{Linux}
-
-\divider
-
-Languages
-\medskip
-
-\cvtag{English}
-\cvtag{Spanish}
-\cvtag{German}
 
 %\cvsection{Skills}
 %
